Added computerPlay, getPlayerChoice, and playRound functions

--- a/RPS.html
+++ b/RPS.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="RPS.css">
+    <script src="RPS.js"></script>
     <title>Rock Paper Scissors</title>
   </head>
   <body>
