--- a/RPS.html
+++ b/RPS.html
@@ -1,10 +1,19 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="RPS.css">
-    <script src="RPS.js"></script>
-    <title>Rock Paper Scissors</title>
-  </head>
-  <body>
-    <h1>Rock Paper Scissors!</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="RPS.css">
+</head>
+<body>
+
+  <h1>Rock Paper Scissors!</h1>
+  <div class="scoreboard"></div>
+  <div class="buttons">
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
+  </div>
+<script src="RPSv2.js"></script>
+</body>
 </html>
