added event listeners with playRound function to buttons that print to div

--- a/RPS.html
+++ b/RPS.html
@@ -8,11 +8,13 @@
 <body>
 
   <h1>Rock Paper Scissors!</h1>
-  <div class="scoreboard"></div>
-  <div class="buttons">
-    <button>Rock</button>
-    <button>Paper</button>
-    <button>Scissors</button>
+  <div>
+    <p class="scoreboard">test</p>
+  </div>
+  <div>
+    <button class="choices">Rock</button>
+    <button class="choices">Paper</button>
+    <button class="choices">Scissors</button>
   </div>
 <script src="RPSv2.js"></script>
 </body>
