Scoreboard output running. Need to figure out how to reset

--- a/RPS.html
+++ b/RPS.html
@@ -9,7 +9,8 @@
 
   <h1>Rock Paper Scissors!</h1>
   <div>
-    <p class="scoreboard">test</p>
+    <h3 class="scoreboard"></h3>
+    <p class="message">Click to start!</p>
   </div>
   <div>
     <button class="choices">Rock</button>
