Counter resets after each game. Centered in page

--- a/RPS.html
+++ b/RPS.html
@@ -6,16 +6,21 @@
   <link rel="stylesheet" href="RPS.css">
 </head>
 <body>
+  <div class="grid-wrapper">
 
-  <h1>Rock Paper Scissors!</h1>
-  <div>
-    <h3 class="scoreboard"></h3>
-    <p class="message">Click to start!</p>
-  </div>
-  <div>
-    <button class="choices">Rock</button>
-    <button class="choices">Paper</button>
-    <button class="choices">Scissors</button>
+    <div class="flex-wrapper">
+  
+      <h1>Rock Paper Scissors!</h1>
+      <div>
+        <h3 class="scoreboard"></h3>
+        <p class="message">Click to start!</p>
+      </div>
+      <div>
+        <button class="choices">Rock</button>
+        <button class="choices">Paper</button>
+        <button class="choices">Scissors</button>
+      </div>
+    </div>
   </div>
 <script src="RPSv2.js"></script>
 </body>
